# ghmd

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: publish-node.yaml  publish-python.yaml  publish-python.yml  publish.yml
scripts/: sync-shared.js
src/browser/: astro.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/browser/public/: robots.txt  site.webmanifest
src/browser/src/: App.jsx  App.tsx  analytics.ts  env.d.ts  main.js  main.jsx  main.tsx  style.css  styles.css
src/browser/src/components/: posthog.astro
src/browser/src/layouts/: PostHogLayout.astro
src/browser/src/pages/: index.astro
src/ghmd/: __main__.py  md-template.html
src/node/: biome.json  jsr.json  package.json  tsconfig.json
src/node/src/: cli.ts  index.js  index.ts
src/python/: MANIFEST.in  pyproject.toml
src/python/src/ghmd/: __main__.py
src/shared/: md-template.html  strings.json
test/: fixture.md  index.test.js
test/expected/: fixture-dark-embed-css-no-gfm.html  fixture-dark-embed-css.html  fixture-dark-no-gfm.html  fixture-dark.html  fixture-embed-css-no-gfm.html  fixture-embed-css.html  fixture-light-embed-css-no-gfm.html  fixture-light-embed-css.html  fixture-light-no-gfm.html  fixture-light.html  fixture-no-gfm.html  fixture.html
